--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -2,18 +2,32 @@
 <html>
 <head>
     <title>Text Input App</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 100px;
+            margin-left: 100px;
+            margin-right: 100px;
+            min-height: fit-content;
+            margin-bottom: 100px;
+            -webkit-margin-bottom-collapse: collapse;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Input Text</h1>
-    <form method="post">
-        <input type="text" name="textinput" required>
-        <button type="submit">Submit</button>
-    </form>
-    {% if output %}
-    <h2>Input Received</h2>
-    <p>{{ user_input }}</p>  <!-- Displaying user input -->
-    <h2>Processed Output</h2>
-    <p>{{ output }}</p>  <!-- Displaying processed output -->
-    {% endif %}
+    <div class="center">
+        <h1>Input Text</h1>
+        <form method="post">
+            <textarea name="textinput" rows="10" style="width: 800px;" required></textarea>
+            <button type="submit">Submit</button>
+        </form>
+        {% if output %}
+        <h2>Processed Output</h2>
+        <p>{{ output }}</p>  <!-- Displaying processed output -->
+        {% endif %}
+    </div>
 </body>
 </html>
