--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -13,7 +13,6 @@
             min-height: fit-content;
             margin-bottom: 100px;
             -webkit-margin-bottom-collapse: collapse;
-
         }
     </style>
 </head>
@@ -26,7 +25,7 @@
         </form>
         {% if output %}
         <h2>Processed Output</h2>
-        <p>{{ output }}</p>  <!-- Displaying processed output -->
+        <pre>{{ output }}</pre>  <!-- Displaying processed output -->
         {% endif %}
     </div>
 </body>
