--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -25,7 +25,7 @@
         </form>
         {% if output %}
         <h2>Processed Output</h2>
-        <pre>{{ output }}</pre>  <!-- Displaying processed output -->
+        <p>{{ output }}</p>  <!-- Displaying processed output -->
         {% endif %}
     </div>
 </body>
