--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
 <body>
     <div class="container">
         <h1>Enter Text</h1>
+        <button type="button" onclick="window.location.href='test.html'">Enter the text in the format provided</button>
         <form method="post" class="center">
             <textarea name="textinput" required="" style="width: 500px; height: 350px;"></textarea>
             <br>
