--- a/templates/test.html
+++ b/templates/test.html
@@ -21,6 +21,9 @@ function copyTextToClipboard() {
 </script>
 </head>
 <body>
+    <p>Main page</p>
+    <p id="textToCopy">This is the text that will be copied to the clipboard.</p>
+    <button onclick="copyTextToClipboard()">Copy Text</button>
 <p id="textToCopy">        Search for projects by keyword or project ID
     AnyAllExact
     DashboardProject SearchCompany SearchTrackingExport
